# vulkan_tutorial

./: CMakeLists.txt
model/: animated.gltf
shader/: shader.frag  shader.vert
src/: Bones.h  SkeletalAnimation.h  Skeleton.h  main.cpp  test.cpp
src/builder/: GltfBuilder.h
